Revert "- #1683132 by sun, DocFX: Fixed box-shadow and extra margin/padding causes horizontal scrollbar."
This reverts commit ed6295cd3706f7c969f71b744e97c85656112f36.

--- a/admin_menu_toolbar/admin_menu_toolbar.css
+++ b/admin_menu_toolbar/admin_menu_toolbar.css
@@ -16,8 +16,7 @@ html body.admin-menu {
 html body.admin-menu-with-shortcuts {
   margin-top: 65px !important;
 }
-/* Displace the core Toolbar, if concurrently output. */
-body div#toolbar.toolbar {
+body div#toolbar {
   top: 30px;
 }
 
@@ -29,9 +28,13 @@ body div#toolbar.toolbar {
  */
 #admin-menu {
   font: normal small "Lucida Grande", Verdana, sans-serif;
-  -moz-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.8);
-  -webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, 0.8);
-  box-shadow: 0 3px 8px rgba(0, 0, 0, 0.8);
+  margin: 0 -20px;
+  padding: 0 20px;
+  -moz-box-shadow: 0 3px 20px #000;
+  -webkit-box-shadow: 0 3px 20px #000;
+  box-shadow: 0 3px 20px #000;
+  right: 0;
+  width: auto;
 }
 #admin-menu-wrapper {
   font-size: .846em;
